; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_tree-scalar-evolution.c_dump_chrecs_stats.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_tree-scalar-evolution.c_dump_chrecs_stats.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.chrec_stats = type { i32, i32, i32, i32, i32, i32 }

@.str = private unnamed_addr constant [4 x i8] c"\0A(\0A\00", align 1
@.str.1 = private unnamed_addr constant [43 x i8] c"-----------------------------------------\0A\00", align 1
@.str.2 = private unnamed_addr constant [29 x i8] c"%d\09affine univariate chrecs\0A\00", align 1
@.str.3 = private unnamed_addr constant [31 x i8] c"%d\09affine multivariate chrecs\0A\00", align 1
@.str.4 = private unnamed_addr constant [38 x i8] c"%d\09degree greater than 2 polynomials\0A\00", align 1
@.str.5 = private unnamed_addr constant [27 x i8] c"%d\09chrec_dont_know chrecs\0A\00", align 1
@.str.6 = private unnamed_addr constant [17 x i8] c"%d\09total chrecs\0A\00", align 1
@.str.7 = private unnamed_addr constant [35 x i8] c"%d\09with undetermined coefficients\0A\00", align 1
@.str.8 = private unnamed_addr constant [32 x i8] c"%d\09chrecs in the scev database\0A\00", align 1
@scalar_evolution_info = common dso_local global i32 0, align 4
@.str.9 = private unnamed_addr constant [30 x i8] c"%d\09sets in the scev database\0A\00", align 1
@nb_set_scev = common dso_local global i32 0, align 4
@.str.10 = private unnamed_addr constant [30 x i8] c"%d\09gets in the scev database\0A\00", align 1
@nb_get_scev = common dso_local global i32 0, align 4
@.str.11 = private unnamed_addr constant [4 x i8] c")\0A\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.chrec_stats*)* @dump_chrecs_stats to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dump_chrecs_stats(i32* %0, %struct.chrec_stats* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.chrec_stats*, align 8
  store i32* %0, i32** %3, align 8
  store %struct.chrec_stats* %1, %struct.chrec_stats** %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = call i32 (i32*, i8*, ...) @fprintf(i32* %5, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %7 = load i32*, i32** %3, align 8
  %8 = call i32 (i32*, i8*, ...) @fprintf(i32* %7, i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str.1, i64 0, i64 0))
  %9 = load i32*, i32** %3, align 8
  %10 = load %struct.chrec_stats*, %struct.chrec_stats** %4, align 8
  %11 = getelementptr inbounds %struct.chrec_stats, %struct.chrec_stats* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 (i32*, i8*, ...) @fprintf(i32* %9, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.2, i64 0, i64 0), i32 %12)
  %14 = load i32*, i32** %3, align 8
  %15 = load %struct.chrec_stats*, %struct.chrec_stats** %4, align 8
  %16 = getelementptr inbounds %struct.chrec_stats, %struct.chrec_stats* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = call i32 (i32*, i8*, ...) @fprintf(i32* %14, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.3, i64 0, i64 0), i32 %17)
  %19 = load i32*, i32** %3, align 8
  %20 = load %struct.chrec_stats*, %struct.chrec_stats** %4, align 8
  %21 = getelementptr inbounds %struct.chrec_stats, %struct.chrec_stats* %20, i32 0, i32 2
  %22 = load i32, i32* %21, align 4
  %23 = call i32 (i32*, i8*, ...) @fprintf(i32* %19, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.4, i64 0, i64 0), i32 %22)
  %24 = load i32*, i32** %3, align 8
  %25 = load %struct.chrec_stats*, %struct.chrec_stats** %4, align 8
  %26 = getelementptr inbounds %struct.chrec_stats, %struct.chrec_stats* %25, i32 0, i32 3
  %27 = load i32, i32* %26, align 4
  %28 = call i32 (i32*, i8*, ...) @fprintf(i32* %24, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.5, i64 0, i64 0), i32 %27)
  %29 = load i32*, i32** %3, align 8
  %30 = call i32 (i32*, i8*, ...) @fprintf(i32* %29, i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str.1, i64 0, i64 0))
  %31 = load i32*, i32** %3, align 8
  %32 = load %struct.chrec_stats*, %struct.chrec_stats** %4, align 8
  %33 = getelementptr inbounds %struct.chrec_stats, %struct.chrec_stats* %32, i32 0, i32 4
  %34 = load i32, i32* %33, align 4
  %35 = call i32 (i32*, i8*, ...) @fprintf(i32* %31, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.6, i64 0, i64 0), i32 %34)
  %36 = load i32*, i32** %3, align 8
  %37 = load %struct.chrec_stats*, %struct.chrec_stats** %4, align 8
  %38 = getelementptr inbounds %struct.chrec_stats, %struct.chrec_stats* %37, i32 0, i32 5
  %39 = load i32, i32* %38, align 4
  %40 = call i32 (i32*, i8*, ...) @fprintf(i32* %36, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.7, i64 0, i64 0), i32 %39)
  %41 = load i32*, i32** %3, align 8
  %42 = call i32 (i32*, i8*, ...) @fprintf(i32* %41, i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str.1, i64 0, i64 0))
  %43 = load i32*, i32** %3, align 8
  %44 = load i32, i32* @scalar_evolution_info, align 4
  %45 = call i64 @htab_elements(i32 %44)
  %46 = trunc i64 %45 to i32
  %47 = call i32 (i32*, i8*, ...) @fprintf(i32* %43, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.8, i64 0, i64 0), i32 %46)
  %48 = load i32*, i32** %3, align 8
  %49 = load i32, i32* @nb_set_scev, align 4
  %50 = call i32 (i32*, i8*, ...) @fprintf(i32* %48, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.9, i64 0, i64 0), i32 %49)
  %51 = load i32*, i32** %3, align 8
  %52 = load i32, i32* @nb_get_scev, align 4
  %53 = call i32 (i32*, i8*, ...) @fprintf(i32* %51, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.10, i64 0, i64 0), i32 %52)
  %54 = load i32*, i32** %3, align 8
  %55 = call i32 (i32*, i8*, ...) @fprintf(i32* %54, i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str.1, i64 0, i64 0))
  %56 = load i32*, i32** %3, align 8
  %57 = call i32 (i32*, i8*, ...) @fprintf(i32* %56, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.11, i64 0, i64 0))
  ret void
}

declare dso_local i32 @fprintf(i32*, i8*, ...) #1

declare dso_local i64 @htab_elements(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
